# AIS_Project

./: .gitignore  README.md  app.py  project.md  pyproject.toml
data/: pois.csv
notebooks/: evaluation.ipynb
outputs/: occupancy_timeseries.csv  paired_statistics.csv  recommendations.csv  run_metrics.csv
src/sustainable_tourism/: __init__.py  artifacts.py  cli.py  data.py  experiment.py  metrics.py  profiles.py  recommenders.py  simulation.py
